istio-c/isiti-timeouts/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: one
  namespace: test
spec:
  containers:
    - name: c1
      image: chaitu1812/debug
      command: ["sleep","1000000s"]
