istio-c/isiti-timeouts/vs.yaml

---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: https-vs
  namespace: test
spec:
  hosts:
    - my-app-service.test.svc.cluster.local
  http:
    - fault:
        delay:
          percentage:
            value: 100
          fixedDelay: 2s
      route:
        - destination:
            host: my-app-service.test.svc.cluster.local
            subset: v1
